--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,6 @@
 version: '3.8'
 services:
-  # db:
-  #   image: postgres
-  #   restart: always
-  #   ports:
-  #     - "5432:5432"
-  #   environment:
-  #     POSTGRES_USER: user-name
-  #     POSTGRES_PASSWORD: strong-password
-  #   volumes:
-  #     - local-pgdata:/var/lib/postgresql/data
-
+  
   pgadmin:
     image: dpage/pgadmin4
     restart: always
@@ -19,6 +9,7 @@ services:
     environment:
       PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
       PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
+      PGADMIN_ENABLE_TLS: true
     volumes:
       - pgadmin-data:/var/lib/pgadmin
 
