--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       PGADMIN_ENABLE_TLS: true
     volumes:
       - pgadmin-data:/var/lib/pgadmin
-      - certs:/data/coolify/proxy
+      - /data/coolify/proxy:/certs
 
 volumes:
   pgadmin-data:
